--- a/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
+++ b/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
@@ -92,7 +92,10 @@
             android:label="@string/title_activity_multiple_root" />
         <activity
             android:name=".MultipleRootTable2Activity"
-            android:label="@string/title_activity_multiple_root_table2"></activity>
+            android:label="@string/title_activity_multiple_root_table2" />
+        <activity
+            android:name=".GraphActivity"
+            android:label="@string/title_activity_graph"></activity>
     </application>
 
 </manifest>
