--- a/elemental/Elemental/demoapp-wearable/build.gradle
+++ b/elemental/Elemental/demoapp-wearable/build.gradle
@@ -17,9 +17,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 apply plugin: 'com.android.application'
