--- a/elemental/Elemental/demoapp/build.gradle
+++ b/elemental/Elemental/demoapp/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'com.github.triplet.play'
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     compile project(':androidplot-core')
     compile 'com.crittercism:crittercism-android-agent:5.4.0'
 
@@ -26,6 +27,8 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:gridlayout-v7:26.1.0'
 }
 
 buildscript {
