Empezando metodos iterativos de matrices

--- a/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
+++ b/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
@@ -96,6 +96,7 @@
         <activity
             android:name=".matrix2"
             android:label="@string/title_activity_matrix2" />
+        <activity android:name=".Iterativos"></activity>
     </application>
 
 </manifest>
