--- a/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
+++ b/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
@@ -96,7 +96,10 @@
         <activity
             android:name=".matrix2"
             android:label="@string/title_activity_matrix2" />
-        <activity android:name=".Iterativos"></activity>
+        <activity android:name=".Iterativos" />
+        <activity
+            android:name=".resultado_matrices"
+            android:label="@string/title_activity_resultado_matrices"></activity>
     </application>
 
 </manifest>
