--- a/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
+++ b/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
@@ -94,6 +94,9 @@
             android:name=".GraphActivity"
             android:label="@string/title_activity_graph" />
         <activity
+            android:name=".TablaIterativos"
+            android:label="@string/title_activity_graph" />
+        <activity
             android:name=".matrix2"
             android:label="@string/title_activity_matrix2" />
         <activity android:name=".Iterativos" />
