--- a/elemental/Elemental/androidplot-core/build.gradle
+++ b/elemental/Elemental/androidplot-core/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'com.halfhp.fig:figlib:1.0.7'
     compile 'com.android.support:support-annotations:27.0.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     testCompile "org.mockito:mockito-core:1.10.19"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.robolectric:robolectric:3.1"
