--- a/elemental/Elemental/demoapp/build.gradle
+++ b/elemental/Elemental/demoapp/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     compile project(':androidplot-core')
     compile 'com.crittercism:crittercism-android-agent:5.4.0'
-
+    compile 'com.android.support:support-annotations:27.0.2'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
