Errores corregidos en matrices

--- a/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
+++ b/elemental/Elemental/demoapp/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
             android:name=".BusquedasIncrementalesActivity"
             />
         <activity
+            android:name=".TablaIterativos"
+            />
+        <activity
             android:name=".MetodoIncrementalTablaActivity" />
         <activity
             android:name=".PuntoFijoTableActivity" />
